force-app/zurich-base/main/default/objects/Account/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>[ZRM] Campo que se informa a partir de Customer Segment para mostrar una imagen de ayuda cuando se pulsa sobre el valor</description>
    <formula>Case(
	   DescriptionCustomerSegment__c, 
				&quot;1. Jóvenes&quot;, HYPERLINK(&quot;/resource/otros_segmentos&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;2. Precavidos&quot;, HYPERLINK(&quot;/resource/otros_segmentos&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;3. Independientes&quot;, HYPERLINK(&quot;/resource/independientes&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;4. Nuevas familias&quot;, HYPERLINK(&quot;/resource/nuevas_familias&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;5. Familias con adolescentes&quot;, HYPERLINK(&quot;/resource/familias_con_adolescentes&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;6. Familias acomodadas&quot;, HYPERLINK(&quot;/resource/familias_acomodadas&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				&quot;7. Seniors&quot;, HYPERLINK(&quot;/resource/otros_segmentos&quot;, IMAGE(&quot;/resource/Info&quot;, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; DescriptionCustomerSegment__c, &quot;_self&quot;),
				$Label.ZRM_CustomerSegment_NoValue
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>