force-app/zurich-base/main/default/objects/Account/fields/CustomerSegmentInfo__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegmentInfo__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de ACCOUNT_SCORE_KPI</description>
    <label>Customer Segment Info</label>
    <length>80</length>
    <type>Text</type>
</CustomField>