force-app/zurich-base/main/default/objects/Account/fields/CustomerValue__c.field-meta.xml
<CustomField>
    <fullName>CustomerValue__c</fullName>
    <label>Customer value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Exclusivo Vida</fullName>
            </value>
            <value>
                <fullName>No Valor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>