force-app/zurich-base/main/default/objects/Account/fields/Delegations__c.field-meta.xml
<CustomField>
    <fullName>Delegations__c</fullName>
    <description>Número de delegaciones</description>
    <label>Delegations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>