force-app/zurich-base/main/default/objects/Account/fields/DescriptionCustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>DescriptionCustomerSegment__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de ACCOUNT_SCORE_KPI</description>
    <label>Description Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>