force-app/zurich-base/main/default/objects/Account/fields/DescriptionScoreCLTV_Life__c.field-meta.xml
<CustomField>
    <fullName>DescriptionScoreCLTV_Life__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de Customer_KPI</description>
    <label>Description Score CLTV (Life)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>