force-app/zurich-base/main/default/objects/Account/fields/DescriptionScoreCLTV_NoLife__c.field-meta.xml
<CustomField>
    <fullName>DescriptionScoreCLTV_NoLife__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de ACCOUNT_SCORE_KPI</description>
    <label>DescriptionScoreCLTV_Non-Life)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>