force-app/zurich-base/main/default/objects/Account/fields/DigitalMKTStrategy__c.field-meta.xml
<CustomField>
    <fullName>DigitalMKTStrategy__c</fullName>
    <label>Digital MKT strategy / Specialist employ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>