force-app/zurich-base/main/default/objects/Account/fields/DownloadAccess__c.field-meta.xml
<CustomField>
    <fullName>DownloadAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceso Descargas</label>
    <type>Checkbox</type>
</CustomField>