force-app/zurich-base/main/default/objects/Account/fields/DownloadDecission__c.field-meta.xml
<CustomField>
    <fullName>DownloadDecission__c</fullName>
    <description>Campo en el que los usuarios pueden indicar si la cuenta debe mantener o no el acceso a descargas</description>
    <label>Decisión descargas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mantener</fullName>
            </value>
            <value>
                <fullName>Retirar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>