force-app/zurich-base/main/default/objects/Account/fields/EIACStatus__c.field-meta.xml
<CustomField>
    <fullName>EIACStatus__c</fullName>
    <label>EIAC (Status)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Traspasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>