force-app/zurich-base/main/default/objects/Account/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <label>E-mail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>