force-app/zurich-base/main/default/objects/Account/fields/Email_Recertificador__c.field-meta.xml
<CustomField>
    <fullName>Email_Recertificador__c</fullName>
    <label>Email Recertificador</label>
    <type>Email</type>
</CustomField>