force-app/zurich-base/main/default/objects/Account/fields/EmailCommunications__c.field-meta.xml
<CustomField>
    <fullName>EmailCommunications__c</fullName>
    <label>Email comunicaciones</label>
    <type>Email</type>
</CustomField>