force-app/zurich-base/main/default/objects/Account/fields/EnableReassignmentLeadOffers__c.field-meta.xml
<CustomField>
    <fullName>EnableReassignmentLeadOffers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Reassignment Lead Offers</label>
    <type>Checkbox</type>
</CustomField>