force-app/zurich-base/main/default/objects/Account/fields/EnterpriseConsultantEmail__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseConsultantEmail__c</fullName>
    <description>SDM: Consultor Empresas</description>
    <label>Enterprise Consultant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>