force-app/zurich-base/main/default/objects/Account/fields/EnterpriseConsultantName__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseConsultantName__c</fullName>
    <label>Enteprise Consultant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>