force-app/zurich-base/main/default/objects/Account/fields/EnterpriseManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>EnterpriserManageEmail__c</fullName>
    <description>SDM: Director Empresas Email</description>
    <label>Enterprise Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>