force-app/zurich-base/main/default/objects/Account/fields/EnterpriseManagerName__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseManagerName__c</fullName>
    <description>SDM: Director Empresas Name</description>
    <label>Enterprise Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>