force-app/zurich-base/main/default/objects/Account/fields/EnterpriseSegment__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseSegment__c</fullName>
    <label>Enterprise Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>