force-app/zurich-base/main/default/objects/Account/fields/EnviadoABerkley__c.field-meta.xml
<CustomField>
    <fullName>EnviadoABerkley__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo check para que el gestor pueda seleccionar o no dicho check, para luego poder sacar info de qué y cuántos leads se marcan para tener trazabilidad.</description>
    <label>Enviado a Berkley</label>
    <type>Checkbox</type>
</CustomField>