force-app/zurich-base/main/default/objects/Account/fields/ExceptionLetterRefuse__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLetterRefuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Letter Refuse</label>
    <type>Checkbox</type>
</CustomField>