force-app/zurich-base/main/default/objects/Account/fields/ExpatsSegment__c.field-meta.xml
<CustomField>
    <fullName>ExpatsSegment__c</fullName>
    <label>Segmento Expats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Oro</fullName>
            </value>
            <value>
                <fullName>Plata</fullName>
            </value>
            <value>
                <fullName>Bronce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>