force-app/zurich-base/main/default/objects/Account/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <label>Expert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>