force-app/zurich-base/main/default/objects/Account/fields/ExternalCollaborator__c.field-meta.xml
<CustomField>
    <fullName>ExternalCollaborator__c</fullName>
    <label>External Collaborator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>