force-app/zurich-base/main/default/objects/Account/fields/FinancialScoring__c.field-meta.xml
<CustomField>
    <fullName>FinancialScoring__c</fullName>
    <description>Referencia al número total de empleados</description>
    <label>Financial Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>