force-app/zurich-base/main/default/objects/Account/fields/Foreigners__c.field-meta.xml
<CustomField>
    <fullName>Foreigners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreigners</label>
    <type>Checkbox</type>
</CustomField>