force-app/zurich-base/main/default/objects/Account/fields/Gestor_personalizado_USP__c.field-meta.xml
<CustomField>
    <fullName>Gestor_personalizado_USP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor personalizado (USP)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>