force-app/zurich-base/main/default/objects/Account/fields/GlobalCustomerValue_NoLife__c.field-meta.xml
<CustomField>
    <fullName>GlobalCustomerValue_NoLife__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de Customer_KPI</description>
    <formula>Case(
				DescriptionScoreCLTV_NoLife__c, 
				&quot;N/A&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;1 estrella roja&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE($Setup.Account_Score_KPI__c.OneRedStar__c, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;1 estrella amarilla&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;2 estrellas amarillas&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;3 estrellas amarillas&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;4 estrellas amarillas&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				&quot;5 estrellas amarillas&quot;, HYPERLINK($Setup.Account_Score_KPI__c.CLTV_NoLife__c, IMAGE($Setup.Account_Score_KPI__c.Info_Icon__c, &quot;Info Icon&quot;, 16, 16) &amp; &quot; &quot; &amp; IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;Stars&quot;),&quot;_self&quot;), 
				$Label.ZRM_GlobalCustomerValue_NoValue
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulsa sobre la imagen para mostrar más información</inlineHelpText>
    <label>Global Customer Value (Non-Life)</label>
    <type>Text</type>
</CustomField>