force-app/zurich-base/main/default/objects/Account/fields/GlobalCustomerValueInfo_Life__c.field-meta.xml
<CustomField>
    <fullName>GlobalCustomerValueInfo_Life__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de Customer_KPI</description>
    <label>Global Customer Value Info (Life)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>