force-app/zurich-base/main/default/objects/Account/fields/GlobalCustomerValueInfo_NoLife__c.field-meta.xml
<CustomField>
    <fullName>GlobalCustomerValueInfo_NoLife__c</fullName>
    <description>[ZRM] Campo que se obtiene a partir de la nueva External request de Customer_KPI</description>
    <label>Global Customer Value Info (Non-Life)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>