force-app/zurich-base/main/default/objects/Account/fields/GoldenRecord__c.field-meta.xml
<CustomField>
    <fullName>GoldenRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Relación con la cuenta principal de las distintas entidades legales</description>
    <label>Golden Record</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Golden Record)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>