force-app/zurich-base/main/default/objects/Account/fields/GrandparentBusinessName__c.field-meta.xml
<CustomField>
    <fullName>GrandparentBusinessName__c</fullName>
    <description>OCS. Identifica el abuelo en la jerarquía del Partner</description>
    <label>Grandparent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>