force-app/zurich-base/main/default/objects/Account/fields/GreatGrandparentBusinessName__c.field-meta.xml
<CustomField>
    <fullName>GreatGrandparentBusinessName__c</fullName>
    <description>OCS. Identifica el bisabuelo en la jerarquía del Partner</description>
    <label>Great-Grandparent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>