force-app/zurich-base/main/default/objects/Account/fields/GridReference__c.field-meta.xml
<CustomField>
    <fullName>GridReference__c</fullName>
    <formula>IF(
  OR( AND(NOT(ISBLANK(BillingLatitude)),BillingLatitude &lt;&gt; 0), AND(NOT(ISBLANK(BillingLongitude)),BillingLongitude &lt;&gt; 0)) , 
    HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot;&amp; TEXT(BillingLatitude) &amp;&quot;,&quot;&amp; TEXT( BillingLongitude ),  
       TEXT(BillingLatitude)+&quot;,&quot;+TEXT(BillingLongitude) , &quot;_self&quot;), 
 &apos;Cliente no cuenta con datos de coordenadas&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enlace al mapa de la ubicación basado en latitud y longitud</inlineHelpText>
    <label>Grid Reference</label>
    <type>Text</type>
</CustomField>