force-app/zurich-base/main/default/objects/Account/fields/GroupLifeConsultantEmail__c.field-meta.xml
<CustomField>
    <fullName>GroupLifeConsultantEmail__c</fullName>
    <description>SDM: Consultor vida colectivos</description>
    <label>Group Life Consultant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>