force-app/zurich-base/main/default/objects/Account/fields/GroupLifeConsultantName__c.field-meta.xml
<CustomField>
    <fullName>GroupLifeConsultantName__c</fullName>
    <label>Group Life Consultant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>