force-app/zurich-base/main/default/objects/Account/fields/GrowthPotential__c.field-meta.xml
<CustomField>
    <fullName>GrowthPotential__c</fullName>
    <label>Growth potential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>