force-app/zurich-base/main/default/objects/Account/fields/HazardSusceptibility__c.field-meta.xml
<CustomField>
    <fullName>HazardSusceptibility__c</fullName>
    <description>Clasificación siniestral de las pólizas (1-5)</description>
    <label>Hazard Susceptibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>