force-app/zurich-base/main/default/objects/Account/fields/HealthSpecialist__c.field-meta.xml
<CustomField>
    <fullName>HealthSpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Specialist</label>
    <type>Checkbox</type>
</CustomField>