force-app/zurich-base/main/default/objects/Account/fields/HomeVideo__c.field-meta.xml
<CustomField>
    <fullName>HomeVideo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Video</label>
    <type>Checkbox</type>
</CustomField>