force-app/zurich-base/main/default/objects/Account/fields/Hootsuite__c.field-meta.xml
<CustomField>
    <fullName>Hootsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hootsuite</label>
    <type>Checkbox</type>
</CustomField>