force-app/zurich-base/main/default/objects/Account/fields/IdSubscriber2__c.field-meta.xml
<CustomField>
    <fullName>IdSubscriber2__c</fullName>
    <label>Subscriber Id 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>