force-app/zurich-base/main/default/objects/Account/fields/IdSubscriber__c.field-meta.xml
<CustomField>
    <fullName>IdSubscriber__c</fullName>
    <label>Subscriber Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>