force-app/zurich-base/main/default/objects/Account/fields/InactiveOrNonExistentUsers__c.field-meta.xml
<CustomField>
    <fullName>InactiveOrNonExistentUsers__c</fullName>
    <description>Campo que muestra los roles no representados debido a que el correo electrónico del campo del mediador no pertenece a ningún usuario del sistema, o pertenece a un usuario que su estado es inactivo.</description>
    <label>Inactive or non existent users</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>