force-app/zurich-base/main/default/objects/Account/fields/Income2019__c.field-meta.xml
<CustomField>
    <fullName>Income2019__c</fullName>
    <label>Income 2019</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>