force-app/zurich-base/main/default/objects/Account/fields/IncomeLevel__c.field-meta.xml
<CustomField>
    <fullName>IncomeLevel__c</fullName>
    <label>Income level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>