force-app/zurich-base/main/default/objects/Account/fields/Incomes2020__c.field-meta.xml
<CustomField>
    <fullName>Incomes2020__c</fullName>
    <label>Income 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>