force-app/zurich-base/main/default/objects/Account/fields/IncomeVar__c.field-meta.xml
<CustomField>
    <fullName>IncomeVar__c</fullName>
    <label>Income variation 5 years</label>
    <precision>16</precision>
    <scale>12</scale>
    <type>Percent</type>
</CustomField>