force-app/zurich-base/main/default/objects/Account/fields/IndividualManagedBonus__c.field-meta.xml
<CustomField>
    <fullName>IndividualManagedBonus__c</fullName>
    <label>Individual Managed Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>