force-app/zurich-base/main/default/objects/Account/fields/IndividualsEmail__c.field-meta.xml
<CustomField>
    <fullName>IndividualsEmail__c</fullName>
    <label>Individuals Email</label>
    <type>Email</type>
</CustomField>