force-app/zurich-base/main/default/objects/Account/fields/InfluencerAssociation__c.field-meta.xml
<CustomField>
    <fullName>InfluencerAssociation__c</fullName>
    <label>Influencer Association</label>
    <length>80</length>
    <type>Text</type>
</CustomField>