force-app/zurich-base/main/default/objects/Account/fields/INFOBusinessCode__c.field-meta.xml
<CustomField>
    <fullName>INFOBusinessCode__c</fullName>
    <externalId>true</externalId>
    <label>Business Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>