force-app/zurich-base/main/default/objects/Account/fields/INFOCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>INFOCustomerNumber__c</fullName>
    <description>(OCS/ZE). Destinado a almacenar el código de filiación proveniente del transaccional INFO</description>
    <externalId>true</externalId>
    <label>Affiliation Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>