force-app/zurich-base/main/default/objects/Account/fields/INFOIntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>INFOIntermediaryCode__c</fullName>
    <description>(OCS). Identificador único de intermediario</description>
    <externalId>true</externalId>
    <label>Intermediary Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>