force-app/zurich-base/main/default/objects/Account/fields/INFOIntermediaryGroupCode__c.field-meta.xml
<CustomField>
    <fullName>INFOIntermediaryGroupCode__c</fullName>
    <description>Campo ZRM para identificar la agrupación en INFO</description>
    <externalId>true</externalId>
    <label>INFO Intermediary Group Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>