force-app/zurich-base/main/default/objects/Account/fields/InterestConc__c.field-meta.xml
<CustomField>
    <fullName>InterestConc__c</fullName>
    <label>Interest in concentrate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>