force-app/zurich-base/main/default/objects/Account/fields/Intermediary_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS/ZE). Relación a la cuenta de intermediario asociada al contacto (Partner o Mediador). Al existir este dato únicamente a nivel de póliza, el CRM lo informa en base al valor de Intermediario de la póliza más reciente</description>
    <label>Intermediary Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Intermediary</relationshipName>
    <type>Lookup</type>
</CustomField>