force-app/zurich-base/main/default/objects/Account/fields/IntermediaryAdministrationEmail__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryAdministrationEmail__c</fullName>
    <label>Intermediary Administration Email</label>
    <type>Email</type>
</CustomField>