force-app/zurich-base/main/default/objects/Account/fields/IntermediaryAdminitrationEmail__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryAdminitrationEmail__c</fullName>
    <label>Intermediary Administration Email</label>
    <type>Email</type>
</CustomField>