force-app/zurich-base/main/default/objects/Account/fields/IntermediaryDescription__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryDescription__c</fullName>
    <description>Es el nombre y apellidos de la persona asociada al Intermediario. Viene de INFO.</description>
    <label>Intermediary Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>