force-app/zurich-base/main/default/objects/Account/fields/IntermediaryEndDate__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryEndDate__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_HIERARCHY</description>
    <label>Intermediary End Date</label>
    <type>Date</type>
</CustomField>