force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroup__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referencia al registro de Cuenta Agrupación</description>
    <label>Intermediary Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Solo se puede seleccionar una cuenta de tipo Agrupación Mediador</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agrupación Mediador</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intermediary Group</relationshipLabel> 
    <relationshipName>IntermediaryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>