force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroupDescription__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_GROUP</description>
    <label>Intermediary Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>