force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroupEndDate__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroupEndDate__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_GROUP</description>
    <label>Intermediary Group End Date</label>
    <type>Date</type>
</CustomField>