force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroupSDM__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroupSDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IntermediaryGroupSDM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (IntermediaryGroupSDM)</relationshipLabel>
    <relationshipName>Clientes_Agrupacion</relationshipName>
    <type>Lookup</type>
</CustomField>