force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroupStartDate__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroupStartDate__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_GROUP</description>
    <label>Intermediary Group Start Date</label>
    <type>Date</type>
</CustomField>