force-app/zurich-base/main/default/objects/Account/fields/IntermediaryGroupType__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryGroupType__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_GROUP</description>
    <label>Intermediary Group Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>