force-app/zurich-base/main/default/objects/Account/fields/IntermediaryProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryProvinceCode__c</fullName>
    <label>Intermediary province Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>