force-app/zurich-base/main/default/objects/Account/fields/IntermediarySequence__c.field-meta.xml
<CustomField>
    <fullName>IntermediarySequence__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_HIERARCHY</description>
    <label>Intermediary Sequence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>