force-app/zurich-base/main/default/objects/Account/fields/IntermediaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryStartDate__c</fullName>
    <description>Campo recibido desde INFO en el mensaje INTERMEDIARY_HIERARCHY</description>
    <label>Intermediary Start Date</label>
    <type>Date</type>
</CustomField>