force-app/zurich-base/main/default/objects/Account/fields/IntermediaryStatus__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryStatus__c</fullName>
    <label>Intermediary Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>