force-app/zurich-base/main/default/objects/Account/fields/IntermediaryVisibilityAcc__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryVisibilityAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediary Visibility Acc</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Intermediary Visibility)</relationshipLabel>
    <relationshipName>IntermediaryVisibilityAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>